Добавил Dockerfile Добавил переменные окружения в properties Изменил scope jdbc драйвера, чтобы он был включён в jar'ник

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 server.port=8081
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring_demo
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=5udmm8bd
+spring.datasource.url=jdbc:${DATASOURCE_DRIVER:postgresql}://${DATASOURCE_URL:localhost:5432}/${DATASOURCE_DB_NAME:spring_demo}
+spring.datasource.username=${DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${DATASOURCE_PASSWORD:postgres}
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=validate
