--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,8 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <scope>42.2.18</scope>
+            <version>42.2.18</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
