--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=${DATASOURCE_PASSWORD:postgres}
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=validate
+spring.profiles.active=development
