--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
-server.port=8081
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring_demo
+spring.profiles.active=${PERFLIB_PROFILE:dev}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=5udmm8bd
+spring.datasource.username=${PERFLIB_DATABASE_USER:postgres}
+spring.datasource.password=${PERFLIB_DATABASE_PASSWORD:postgres}
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=validate
-spring.profiles.active=development
+spring.jpa.properties.hibernate.default_schema=auth_service
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=false
+spring.flyway.user=${PERFLIB_DATABASE_USER:postgres}
+spring.flyway.password=${PERFLIB_DATABASE_PASSWORD:postgres}
+spring.flyway.schemas=auth_service
