Добавил PERFLIB_API_URLMAP чтобы можно было в продакшене делать маппинги через Ingress
Signed-off-by: meister1593 <leruop@gmail.com>

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,3 +2,4 @@ spring.config.activate.on-profile=prod
 spring.datasource.url=jdbc:postgresql://${PERFLIB_DATABASE_URL:postgresql:5432/spring_demo}
 spring.flyway.url=jdbc:postgresql://${PERFLIB_DATABASE_URL:postgresql:5432/spring_demo}
 server.port=8081
+spring.urlmap=${PERFLIB_API_URLMAP:}
