--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,4 +2,5 @@ spring.config.activate.on-profile=dev
 spring.datasource.url=jdbc:postgresql://${PERFLIB_DATABASE_URL:localhost:5432/spring_demo}
 spring.flyway.url=jdbc:postgresql://${PERFLIB_DATABASE_URL:localhost:5432/spring_demo}
 server.port=8082
+spring.frontend.url=${PERFLIB_FRONTEND_URL:http://localhost:4200}
 spring.urlmap=${PERFLIB_API_URLMAP:/api/service/authentication/authenticated}
