Поправил деплой на вытаскивание свежего контейнера Поправил security - поставил дефолтный фаервол, без него не работает логин (двойные слеши)
Signed-off-by: meister1593 <leruop@gmail.com>

--- a/kuber/authservice-deployment.yaml
+++ b/kuber/authservice-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: authservice
-          imagePullPolicy: Never
+          imagePullPolicy: Always
           image: plyshka/auth_server_perflib:latest
           ports:
             - containerPort: 8081
