--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=${PERFLIB_PROFILE:dev}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=${PERFLIB_DATABASE_USER:postgres}
-spring.datasource.password=${PERFLIB_DATABASE_PASSWORD:postgres}
+spring.datasource.password=${PERFLIB_DATABASE_PASSWORD:5udmm8bd}
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=validate
@@ -9,5 +9,5 @@ spring.jpa.properties.hibernate.default_schema=auth_service
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=false
 spring.flyway.user=${PERFLIB_DATABASE_USER:postgres}
-spring.flyway.password=${PERFLIB_DATABASE_PASSWORD:postgres}
+spring.flyway.password=${PERFLIB_DATABASE_PASSWORD:5udmm8bd}
 spring.flyway.schemas=auth_service
