--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.jpa.properties.hibernate.default_schema=auth_service
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=false
 spring.flyway.user=${PERFLIB_DATABASE_USER:postgres}
-spring.flyway.password=${PERFLIB_DATABASE_PASSWORD:5udmm8bd}
+spring.flyway.password=${PERFLIB_DATABASE_PASSWORD:postgres}
 spring.flyway.schemas=auth_service
