Поменял пароль для БД на правильный дефолтный
Signed-off-by: meister1593 <leruop@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=${PERFLIB_PROFILE:dev}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=${PERFLIB_DATABASE_USER:postgres}
-spring.datasource.password=${PERFLIB_DATABASE_PASSWORD:5udmm8bd}
+spring.datasource.password=${PERFLIB_DATABASE_PASSWORD:postgres}
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=validate
