Поправил маппинг для ingress контроллера Слегка отформатировал и откатил изменения по репозиториям и запросам В профиль dev добавил debug=true чтобы было улучшенное логирование
Signed-off-by: meister1593 <leruop@gmail.com>

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,4 @@
+debug=true
 spring.config.activate.on-profile=dev
 spring.datasource.url=jdbc:postgresql://${PERFLIB_DATABASE_URL:localhost:5432/spring_demo}
 spring.flyway.url=jdbc:postgresql://${PERFLIB_DATABASE_URL:localhost:5432/spring_demo}
