--- a/kuber/authservice-ingress.yaml
+++ b/kuber/authservice-ingress.yaml
@@ -4,7 +4,8 @@ metadata:
   name: authservice-ingress
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /$1/$2/$3/$4
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   rules:
   - http:
